# tecoroute-manager

./: .dockerignore  .pre-commit-config.yaml  .yamllintrc.yaml  CHANGELOG.md  Dockerfile  README.md  setup.cfg
docs/: conf.py  reference.rst
src/tecoroute_manager/: __init__.py  _cli.py  _manager.py  _misc.py  api_v1.py
src/tecoroute_manager/openapi/: api_v1.yaml
