[metadata]
name = tecoroute-manager
version = 0.1.0
url = https://opensource.cze.tech/tecoroute-manager
project_urls =
    Source = https://github.com/czetech/tecoroute-manager
    Tracker = https://github.com/czetech/tecoroute-manager/issues
    Documentation = https://tecoroute-manager.readthedocs.io/
author = Petr Czepiec
author_email = petr@czepiec.me
maintainer = Petr Czepiec
maintainer_email = petr@czepiec.me
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Home Automation
    Topic :: System :: Hardware
    Typing :: Typed
license = MIT
license_files = LICENSE
description = TecoRoute server and EPSNET connector.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = epsnet, tecoroute

[options]
zip_safe = True
install_requires =
    aiohttp~=3.8
    aiohttp-cors~=0.7
    aiomysql~=0.0.22
    connexion[aiohttp,swagger-ui]~=2.10
    prometheus-client~=0.13
    SQLAlchemy~=1.4
    tecoroute~=0.1
python_requires = >=3.8
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tecoroute-manager = tecoroute_manager:cli

[options.extras_require]
uvloop = uvloop~=0.16

[flake8]
ignore = D105, D107, E203, E501, W503
max-line-length = 80
select = B,C,D,E,F,N,W,B9
max-complexity = 12
